# MinesHackathon2024

./: CMakeLists.txt  imgui.ini
src/: defs.hpp  main.cpp
src/renderer/: ParticleSystem.cpp  ParticleSystem.hpp  Renderer.cpp  Renderer.hpp
src/window/: Window.cpp  Window.hpp
